--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,10 @@
-
+server:
+  port: 8888
+spring:
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/morshedian/cloud-config-general
+          username: morshedian
+          password: m0rshed1aN
